update vscode, add classes

--- a/projects.html
+++ b/projects.html
@@ -12,9 +12,9 @@
 
     <body>
         <header>
-            <h3>Ethan Aldridge's Portfolio</h1>
-            <nav>
-                <ul>
+            <h2 class="header-name">Ethan Aldridge's Portfolio</h2>
+            <nav class="header-nav">
+                <ul class="header-nav-ul">
                     <li><a href="about-me.html">About Me</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="skills.html">Skills</a></li>
