finish header, figure out nav positioning

--- a/about-me.html
+++ b/about-me.html
@@ -9,26 +9,34 @@ deploy using GitHub Pages (buy domain name??)
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Ethan Aldridge's Portfolio: About Me</title>
+		<title>About Me - Ethan Aldridge Portfolio</title>
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="script.js" />
 	</head>
 
 	<body>
-		<header>
-			<h2 class="header-name">Ethan Aldridge's Portfolio</h2>
-			<nav class="header-nav">
-				<ul class="header-nav-ul">
-					<li><a href="#">About Me</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="skills.html">Skills</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</nav>
-		</header>
+		<div class="header-space">
+			<div class="header">
+				<div class="header-text">
+					<img class="header-logo" src="C:/Software/Projects/Personal Portfolio Website/Images/8H4A7366.jpg" alt="Ethan with his son, Jack">
+					<h2 class="header-name">Ethan Aldridge</h2>
+					<h3 class="header-subname">/Portfolio</h3>
+				</div>
+				<div class="header-nav">
+					<a class ="header-nav-a" href="#">About Me</a>
+					<a class ="header-nav-a" href="projects.html">Projects</a>
+					<a class ="header-nav-a" href="skills.html">Skills</a>
+					<a class ="header-nav-a" href="contact.html">Contact</a>
+				</div>
+			</div>
+		</div>	
 
-		<main></main>
+		<main>
 
-		<footer></footer>
+		</main>
+
+		<footer>
+
+		</footer>
 	</body>
 </html>
