--- a/projects.html
+++ b/projects.html
@@ -5,23 +5,27 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ethan Aldridge's Portfolio: Projects</title>
+        <title>Projects - Ethan Aldridge Portfolio</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="script.js">
     </head>
 
     <body>
-        <header>
-            <h2 class="header-name">Ethan Aldridge's Portfolio</h2>
-            <nav class="header-nav">
-                <ul class="header-nav-ul">
-                    <li><a href="about-me.html">About Me</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="skills.html">Skills</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+        <div class="header-space">
+			<div class="header">
+				<div class="header-text">
+					<img class="header-logo" src="C:/Software/Projects/Personal Portfolio Website/Images/8H4A7366.jpg" alt="Ethan with his son, Jack">
+					<h2 class="header-name">Ethan Aldridge</h2>
+					<h3 class="header-subname">/Portfolio</h3>
+				</div>
+				<div class="header-nav">
+					<a class ="header-nav-a" href="about-me.html">About Me</a>
+					<a class ="header-nav-a" href="#">Projects</a>
+					<a class ="header-nav-a" href="skills.html">Skills</a>
+					<a class ="header-nav-a" href="contact.html">Contact</a>
+				</div>
+			</div>
+		</div>	
 
         <main>
 
