final about me section

--- a/about-me.html
+++ b/about-me.html
@@ -15,8 +15,8 @@ deploy using GitHub Pages (buy domain name??)
 	</head>
 
 	<body>
-		<div class="header-space">
-			<div class="header">
+		<header>
+			<div class="header-content">
 				<div class="header-text">
 					<img class="header-logo" src="C:/Software/Projects/Personal Portfolio Website/Images/8H4A7366.jpg" alt="Ethan with his son, Jack">
 					<h2 class="header-name">Ethan Aldridge</h2>
@@ -29,10 +29,35 @@ deploy using GitHub Pages (buy domain name??)
 					<a class ="header-nav-a" href="contact.html">Contact</a>
 				</div>
 			</div>
-		</div>	
+		</header>	
 
 		<main>
-
+			<div class="about-me-space">
+				<div class="about-me-content">
+					<div class="about-me-text">
+						<h1 class="about-me-h1">About Me</h1>
+						<p class="about-me-p">&emsp;&emsp;Hello there! My name is Ethan Aldridge, and this is my portfolio website. The primary focus of this website is to showcase my work in software development. That is, the projects that I have either built myself, or contributed to. You can view these on the <em>projects</em> page. You can also see a list of my relevant skills on the <em>skills</em> page. Likewise, if you wish to get in touch with me, you can find my contact information on the <em>contact</em> page, or at the bottom of any page. Keeping with the theme of a "portfolio", I have included some of my other work in the sections below. Feel free to look around, and message me with your thoughts!</p>
+					</div>
+					<div class="about-me-media">
+						<img class="about-me-img" src="C:/Software/Projects/Personal Portfolio Website/Images/headshot.jpg" alt="picture of Ethan smiling">
+					</div>
+				</div>
+			</div>
+			<div class="father-space">
+				<div class="father-content">
+					<h2 class="father-h2">Father</h2>
+					<p class="father-p">&emsp;&emsp;First and foremost, I am a father. I have a son named Jack, and he's my primary reason for doing all that I do.</p>
+				</div>
+			</div>
+				<div class="health">
+					<p></p>
+				</div>
+				<div class="music">
+					<p></p>
+				</div>
+				<div class="art">
+					<p></p>
+				</div>
 		</main>
 
 		<footer>
