--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
     </head>
 
     <body>
-        <div class="header-space">
-			<div class="header">
+        <header>
+			<div class="header-content">
 				<div class="header-text">
 					<img class="header-logo" src="C:/Software/Projects/Personal Portfolio Website/Images/8H4A7366.jpg" alt="Ethan with his son, Jack">
 					<h2 class="header-name">Ethan Aldridge</h2>
@@ -25,7 +25,7 @@
 					<a class ="header-nav-a" href="#">Contact</a>
 				</div>
 			</div>
-		</div>	
+		</header>	
 
         <main>
 
