update about me page

--- a/about-me.html
+++ b/about-me.html
@@ -45,23 +45,69 @@ deploy using GitHub Pages (buy domain name??)
 			</div>
 			<div class="father-space">
 				<div class="father-content">
-					<h2 class="father-h2">Father</h2>
-					<p class="father-p">&emsp;&emsp;First and foremost, I am a father. I have a son named Jack, and he's my primary reason for doing all that I do.</p>
+					<div class="father-media">
+						<img src="C:/Software/Projects/Personal Portfolio Website/Images/Jack + I.JPG" alt="Ethan and his son, Jack, walking down a sidewalk at a park" class="father-img">
+					</div>
+					<div class="father-text">
+						<h2 class="father-h2">Father</h2>
+						<p class="father-p">&emsp;&emsp;First and foremost, I am a father. I have a son named Jack, and he's my primary reason for doing all that I do. At the time of writing, we're deep in the <em>Winnie the Pooh</em> phase (his favorite character is Tigger). Which means, at any moment, there's a good chance we are either watching, reading, or playing <em>Winnie the Pooh</em>. He also loves to play with juggling balls, race hotwheels, and vacuum. Jack's favorite foods are currently: milk, pickles, sourdough bread with butter and honey, grapes, and steak. Jack's special skills include making coffee, balancing stacked juggling balls, and jumping between the chair and the footrest (with Daddy's supervision). I think it's fair to say he's cooler than I am.</p>
+					</div>
 				</div>
 			</div>
-				<div class="health">
-					<p></p>
+				<div class="health-space">
+					<div class="health-content">
+						<div class="health-text">
+							<h2 class="health-h2">Health</h2>
+							<p class="health-p-1">&emsp;&emsp;I have been strength training for over a decade, at an average of 4 times per week (though for a few years, it was everyday). That's over <em>2,000 workouts</em>. I started working out by doing some pushups, curls, and situps in my bedroom a few days a week. Then I joined my high school football team, got some weights (for free!) and decided to stop football after the season, but keep strength training. Other than video games and drawing, strength training was the first thing that really interested me. I studied Elliott Hulse's stuff, then got into the "movement" world of Ido Portal. I got certified in <em>Functional Range Conditioning</em> (FRC), and studied flexibility from a handful of people: Jon Yuen, Emmet Louis, Kit Laughlin, and Jujimufu to name a few. I also picked up handbalancing thanks to Yuri Marmerstein's <a href="https://www.yuri-mar.com/products/balancing-the-equationpdf-ebook" target="_blank">ebook</a>, and taught myself to juggle, which just made sense because my Dad had always juggled for us as kids (I also learned to ride a skateboard for the same reason). I even learned how to do a backflip! After several years, I decided that I should compile what I had learned into a book. In doing so, I dove into bioenergetics and nutrition, where I learned from Weston Price, Ray Peat, Georgi Dinkov, and Gerald Pollack, again, just to name a few. I spent about <em>~1,500 hours</em> over the course of a year writing my book. All this to say, I am quite passionate about health.</p>
+							<p class="health-p-2">&emsp;&emsp;You can find my book <a href="https://docs.google.com/document/d/1xCO7w0hJ4BJyB07JMp05EW9X3votdM7B_R9hEBYN568/edit?usp=drive_link" target="_blank">here</a>.</p>
+						</div>
+						<div class="health-media">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/Movement.JPG" alt="Ethan doing a shoulderstand on rings" class="health-img-1">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/Side Split.jpg" alt="Ethan doing a side split while holding Jack" class="health-img-2">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/Back Lever.JPG" alt="Ethan doing a back lever on rings" class="health-img-3">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/back pose.JPG" alt="Ethan doing a double bicep pose" class="health-img-4">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/Front Split.jpg" alt="Ethan doing a front split" class="health-img-5">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/handstand.JPG" alt="Ethan doing a handstand at sunset" class="health-img-6">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/Nutrition.JPG" alt="a cutting board covered in food that Ethan eats" class="health-img-7">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/physique.jpg" alt="Ethan doing a pose in half-natty lighting" class="health-img-8">
+						</div>
+					</div>
 				</div>
-				<div class="music">
-					<p></p>
+				<div class="music-space">
+					<div class="music-content">
+						<div class="music-media">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/guitar.png" alt="Ethan playing the guitar" class="music-img">
+						</div>
+						<div class="music-text">
+							<h2 class="music-h2">Music</h2>
+							<p class="music-p">&emsp;&emsp;My earliest memory of music is probably my Dad, putting me to bed at my Grandparents' house to Sarah McLachlan's <em>Surfacing</em>. I also remember riding in his Acura Integra, listening to <em>Coldplay</em>, <em>Incubus</em>, and <em>Jane's Addiction</em>. I attempted to learn to play the guitar in 7th grade, but had little interest. In the summer before starting high school, my friend was learning bass. My step-mom at the time had an old 80's Ibanez, so I brought it over to his house one day. He showed me how to read tabs, and I started playing. I taught myself for a year, learning songs like <em>Stellar</em> by <em>Incubus</em>. After that first year, I started getting lessons from Danny Voris, who used to play at the bar my parent's worked at when they met. He taught me how to play with a pick (acoustic and electric guitar), until he ran out of things to teach me. Then, he taught me how to play classical guitar (using fingernails). Again, until he more or less ran out of things to teach me. As part of being his student, I got to perform at the church where he gave lessons, and also at The Greene, a local shopping center (once with my friends, and once for classical guitar). Now, I mostly play for my son, and for my own enjoyment. Danny, thank you for everything. You can find him <a href="https://music.apple.com/us/album/moving-through-the-ghosts-of-trees/859783888" target="_blank">here</a>.</p>
+						</div>
+					</div>
 				</div>
-				<div class="art">
-					<p></p>
+				<div class="art-space">
+					<div class="art-content">
+						<div class="art-text">
+							<h2 class="art-h2">Art</h2>
+							<p class="art-p">&emsp;&emsp;According to my parents, as soon as I could hold a crayon, I was always drawing. Eventually, at about the age of 14 my inner perfectionist got the best of me, and I had to put it down. I would stare at a blank piece of paper, not knowing what to draw. The creative reservoir dried up, so to speak. In retrospect, letting go of drawing (and video games) created the space that allowed me to learn to play the guitar, and to get into strength training. For anyone who is a creative type fighting the boredom to create, I would recommend exploring other outlets. Coding is my newest outlet, and it's bringing me a lot of enjoyment. Frustration, too... but I think it's a net positive :) Here are some examples of the kinds of things I would draw (I think I was 15 for the tree):</p>
+						</div>
+						<div class="art-media">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/flower drawing.jpg" alt="Ethan's drawing of some flowers" class="art-img-1">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/tree drawing.jpg" alt="Ethan's drawing of a tree" class="art-img-2">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/roses drawing.jpg" alt="Ethan's drawing of some roses" class="art-img-3">
+						</div>
+					</div>
 				</div>
 		</main>
 
 		<footer>
-
+			<div class="footer-space">
+				<div class="footer-content">
+					<div class="footer-contact">
+						<h2 class="footer-h2">Contact</h2>
+						<p class="footer-p">ethanjaldridge97@gmail.com</p>
+					</div>
+				</div>
+			</div>
 		</footer>
 	</body>
 </html>
