--- a/skills.html
+++ b/skills.html
@@ -32,7 +32,14 @@
         </main>
 
         <footer>
-
+            <div class="footer-space">
+				<div class="footer-content">
+					<div class="footer-contact">
+						<h2 class="footer-h2">Contact</h2>
+						<p class="footer-p">ethanjaldridge97@gmail.com</p>
+					</div>
+				</div>
+			</div>
         </footer>
     </body>
 
