--- a/about-me.html
+++ b/about-me.html
@@ -12,6 +12,7 @@ deploy using GitHub Pages (buy domain name??)
 		<title>About Me - Ethan Aldridge Portfolio</title>
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="script.js" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 	</head>
 
 	<body>
@@ -76,7 +77,7 @@ deploy using GitHub Pages (buy domain name??)
 				<div class="music-space">
 					<div class="music-content">
 						<div class="music-media">
-							<img src="C:/Software/Projects/Personal Portfolio Website/Images/guitar.png" alt="Ethan playing the guitar" class="music-img">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/QcHNrzwYf-c?si=nh04y6Akd9Mp3soz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="music-vid"></iframe>
 						</div>
 						<div class="music-text">
 							<h2 class="music-h2">Music</h2>
