update health scrollbar

--- a/about-me.html
+++ b/about-me.html
@@ -62,14 +62,23 @@ deploy using GitHub Pages (buy domain name??)
 							<p class="health-p-2">&emsp;&emsp;You can find my book <a href="https://docs.google.com/document/d/1xCO7w0hJ4BJyB07JMp05EW9X3votdM7B_R9hEBYN568/edit?usp=drive_link" target="_blank">here</a>.</p>
 						</div>
 						<div class="health-media">
-							<img src="C:/Software/Projects/Personal Portfolio Website/Images/Movement.JPG" alt="Ethan doing a shoulderstand on rings" class="health-img-1">
-							<img src="C:/Software/Projects/Personal Portfolio Website/Images/Side Split.jpg" alt="Ethan doing a side split while holding Jack" class="health-img-2">
-							<img src="C:/Software/Projects/Personal Portfolio Website/Images/Back Lever.JPG" alt="Ethan doing a back lever on rings" class="health-img-3">
-							<img src="C:/Software/Projects/Personal Portfolio Website/Images/back pose.JPG" alt="Ethan doing a double bicep pose" class="health-img-4">
-							<img src="C:/Software/Projects/Personal Portfolio Website/Images/Front Split.jpg" alt="Ethan doing a front split" class="health-img-5">
-							<img src="C:/Software/Projects/Personal Portfolio Website/Images/handstand.JPG" alt="Ethan doing a handstand at sunset" class="health-img-6">
-							<img src="C:/Software/Projects/Personal Portfolio Website/Images/Nutrition.JPG" alt="a cutting board covered in food that Ethan eats" class="health-img-7">
-							<img src="C:/Software/Projects/Personal Portfolio Website/Images/physique.jpg" alt="Ethan doing a pose in half-natty lighting" class="health-img-8">
+							<div class="health-slider-wrapper">
+								<div class="health-img-list">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/physique.jpg" alt="Ethan doing a pose in half-natty lighting" class="health-img-v">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/Side Split.jpg" alt="Ethan doing a side split while holding Jack" class="health-img-h">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/back pose.JPG" alt="Ethan doing a double bicep pose" class="health-img-h">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/Movement.JPG" alt="Ethan doing a shoulderstand on rings" class="health-img-v">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/Front Split.jpg" alt="Ethan doing a front split" class="health-img-h-s">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/handstand.JPG" alt="Ethan doing a handstand at sunset" class="health-img-h">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/Nutrition.JPG" alt="a cutting board covered in food that Ethan eats" class="health-img-v">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/Back Lever.JPG" alt="Ethan doing a back lever on rings" class="health-img-h">
+								</div>
+							</div>
+							<div class="health-scrollbar">
+								<div class="health-scrollbar-track">
+									<div class="health-scrollbar-thumb"></div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
