--- a/skills.html
+++ b/skills.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Skills - Ethan Aldridge Portfolio</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="script.js">
+        <script src="script.js" defer></script>
     </head>
 
     <body>
