added drawings to art

--- a/about-me.html
+++ b/about-me.html
@@ -122,6 +122,24 @@ deploy using GitHub Pages (buy domain name??)
 									<img src="C:/Software/Projects/Personal Portfolio Website/Images/mother drawing.jpg" alt="Ethan's drawing of a mother and her baby" class="art-img">
 									<img src="C:/Software/Projects/Personal Portfolio Website/Images/mandala drawing.jpg" alt="Ethan's drawing of a mandala" class="art-img">
 									<img src="C:/Software/Projects/Personal Portfolio Website/Images/ido drawing.jpg" alt="Ethan's drawing of Ido Portal in a handstand" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/abstract.jpg" alt="an abstract drawing" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/mandala.jpg" alt="another mandala drawing" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/eye.jpg" alt="drawing of an eye" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/arena fighter.jpg" alt="drawing of an arena fighter" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/soul knight.jpg" alt="drawing of a soul knight" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/warbringer.jpg" alt="drawing of a warbringer" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/reaper.jpg" alt="drawing of a reaper" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/discus.jpg" alt="drawing of a discus thrower" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/sandow.jpg" alt="drawing of Eugen Sandow" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/kurt.jpg" alt="drawing of Kurt Cobain" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/Jim Hawkins.jpg" alt="drawing of Jim Hawkins from Treasure Planet" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/feist.jpg" alt="drawing of the singer Feist" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/hands.jpg" alt="a drawing of stacked hands" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/heads.jpg" alt="a drawing of heads from different angles" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/hands drawing a rose.jpg" alt="a drawing of hands which are drawing a rose" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/call of duty.jpg" alt="a drawing of a soldier" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/flowers.jpg" alt="another drawing of flowers" class="art-img">
+									<img src="C:/Software/Projects/Personal Portfolio Website/Images/horse.jpg" alt="a drawing of a horse" class="art-img">
 								</div>
 							</div>
 							<button id="art-next-slide" class="art-slide-button material-symbols-outlined">chevron_right</button>
