finished contact page

--- a/about-me.html
+++ b/about-me.html
@@ -38,7 +38,7 @@ deploy using GitHub Pages (buy domain name??)
 				<div class="about-me-content">
 					<div class="about-me-text">
 						<h1 class="about-me-h1">About Me</h1>
-						<p class="about-me-p">&emsp;&emsp;Hello there! My name is Ethan Aldridge, and this is my portfolio website. The primary focus of this website is to showcase my work in software development. That is, the projects that I have either built myself, or contributed to. You can view these on the <em>projects</em> page. You can also see a list of my relevant skills on the <em>skills</em> page. Likewise, if you wish to get in touch with me, you can find my contact information on the <em>contact</em> page, or at the bottom of any page. Keeping with the theme of a "portfolio", I have included some of my other work in the sections below. Feel free to look around, and message me with your thoughts!</p>
+						<p class="about-me-p">&emsp;&emsp;Hello! My name is Ethan Aldridge. I'm a father, health enthusiast, author, guitarist, and an aspiring software developer. On this page, you'll find a bit about who I am as a person. The rest of this website is dedicated to my work in software. At the moment, I'm working my way through codecademy's full-stack course. I'm interested in how permaculture and blockchain technology can be used to improve the way we live. If you'd like to get in touch, you know what to do!</p>
 					</div>
 					<div class="about-me-media">
 						<img class="about-me-img" src="C:/Software/Projects/Personal Portfolio Website/Images/headshot.jpg" alt="picture of Ethan smiling">
@@ -52,7 +52,7 @@ deploy using GitHub Pages (buy domain name??)
 					</div>
 					<div class="father-text">
 						<h2 class="father-h2">Father</h2>
-						<p class="father-p">&emsp;&emsp;First and foremost, I am a father. I have a son named Jack, and he's my primary reason for doing all that I do. At the time of writing, we're deep in the <em>Winnie the Pooh</em> phase (his favorite character is Tigger). Which means, at any moment, there's a good chance we are either watching, reading, or playing <em>Winnie the Pooh</em>. He also loves to play with juggling balls, race hotwheels, and vacuum. Jack's favorite foods are currently: milk, pickles, sourdough bread with butter and honey, grapes, and steak. Jack's special skills include making coffee, balancing stacked juggling balls, and jumping between the chair and the footrest (with Daddy's supervision). I think it's fair to say he's cooler than I am.</p>
+						<p class="father-p">&emsp;&emsp;First and foremost, I am a father. I have a son named Jack, and he's my primary reason for doing all that I do. At the time of writing, we're deep in the <em>Winnie the Pooh</em> phase (his favorite character is Tigger). Which means, at any moment, there's a good chance we are either watching, reading, or playing <em>Winnie the Pooh</em>. He also loves to play with juggling balls, race hotwheels, and vacuum. Jack's favorite foods are currently: milk, pickles, sourdough bread with butter and honey, grapes, and steak. Jack's special skills include making coffee, playing the guitalele, and climbing on his Daddy. I think it's fair to say he's cooler than I am.</p>
 					</div>
 				</div>
 			</div>
@@ -151,10 +151,10 @@ deploy using GitHub Pages (buy domain name??)
 		<footer>
 			<div class="footer-space">
 				<div class="footer-content">
-					<div class="footer-contact">
-						<h2 class="footer-h2">Contact</h2>
-						<p class="footer-p">ethanjaldridge97@gmail.com</p>
-					</div>
+					<a href="https://github.com/ethanjaldridge" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/github-logo.png" alt="github logo" class="github-logo"></a>
+					<a href="https://www.instagram.com/ethanjaldridge/" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/instagram-logo.png" alt="instagram logo" class="instagram-logo"></a>
+					<a href="https://www.youtube.com/@ethanaldridge1639" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/youtube-logo.png" alt="youtube logo" class="youtube-logo"></a>
+					<a href="mailto:ethanjaldridge97@gmail.com" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/email-logo.png" alt="email logo" class="email-logo"></a>
 				</div>
 			</div>
 		</footer>
