--- a/contact.html
+++ b/contact.html
@@ -28,19 +28,43 @@
 		</header>	
 
         <main>
-
-        </main>
-
-        <footer>
-            <div class="footer-space">
-				<div class="footer-content">
-					<div class="footer-contact">
-						<h2 class="footer-h2">Contact</h2>
-						<p class="footer-p">ethanjaldridge97@gmail.com</p>
+			<div class="contact-space">
+				<div class="contact-content">
+					<h1 class="contact-h1">Contact</h1>
+					<div class="contact-body"></div>
+						<div class="contact-form-container">
+							<form action="mailto:ethanjaldridge97@gmail.com" method="POST" enctype="multipart/form-data">
+								<div class="contact-form-item">
+									<label for="name" class="contact-form-label">Name</label>
+									<input type="text" id="name" name="name" class="contact-form-field">
+								</div>
+								<div class="contact-form-item">
+									<label for="message" class="contact-form-label">Message</label>
+									<textarea id="message" name="message" rows="9" class="contact-form-field"></textarea>
+								</div>
+								<div class="contact-form-item">
+									<button class="submit-button">Submit</button>
+								</div>
+							</form>
+						</div>
+						<div class="contact-img-container">
+							<img src="C:/Software/Projects/Personal Portfolio Website/Images/Contact.JPG" alt="a picture of Ethan hanging from gymnastic rings with one arm" class="contact-img">
+						</div>
 					</div>
 				</div>
 			</div>
-        </footer>
+        </main>
+
+        <footer>
+			<div class="footer-space">
+				<div class="footer-content">
+					<a href="https://github.com/ethanjaldridge" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/github-logo.png" alt="github logo" class="github-logo"></a>
+					<a href="https://www.instagram.com/ethanjaldridge/" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/instagram-logo.png" alt="instagram logo" class="instagram-logo"></a>
+					<a href="https://www.youtube.com/@ethanaldridge1639" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/youtube-logo.png" alt="youtube logo" class="youtube-logo"></a>
+					<a href="mailto:ethanjaldridge97@gmail.com" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/email-logo.png" alt="email logo" class="email-logo"></a>
+				</div>
+			</div>
+		</footer>
     </body>
 
 </html>
