--- a/skills.html
+++ b/skills.html
@@ -28,19 +28,26 @@
         </header>	
 
         <main>
-
-        </main>
-
-        <footer>
-            <div class="footer-space">
-				<div class="footer-content">
-					<div class="footer-contact">
-						<h2 class="footer-h2">Contact</h2>
-						<p class="footer-p">ethanjaldridge97@gmail.com</p>
+			<div class="skills-space">
+				<div class="skills-content">
+					<div class="skills-text">
+						<h1 class="skills-h1">Skills</h1>
+						<p class="skills-p">&emsp;&emsp;d</p>
 					</div>
 				</div>
 			</div>
-        </footer>
+        </main>
+
+        <footer>
+			<div class="footer-space">
+				<div class="footer-content">
+					<a href="https://github.com/ethanjaldridge" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/github-logo.png" alt="github logo" class="github-logo"></a>
+					<a href="https://www.instagram.com/ethanjaldridge/" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/instagram-logo.png" alt="instagram logo" class="instagram-logo"></a>
+					<a href="https://www.youtube.com/@ethanaldridge1639" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/youtube-logo.png" alt="youtube logo" class="youtube-logo"></a>
+					<a href="mailto:ethanjaldridge97@gmail.com" target="_blank"><img src="C:/Software/Projects/Personal Portfolio Website/Images/email-logo.png" alt="email logo" class="email-logo"></a>
+				</div>
+			</div>
+		</footer>
     </body>
 
 </html>
