update form subject

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 					<h1 class="contact-h1">Contact</h1>
 					<div class="contact-body"></div>
 						<div class="contact-form-container">
-							<form action="mailto:ethanjaldridge97@gmail.com" method="POST" enctype="multipart/form-data">
+							<form action="mailto:ethanjaldridge97@gmail.com?subject=Contact%20Form%20Submission" method="POST" enctype="multipart/form-data">
 								<div class="contact-form-item">
 									<label for="name" class="contact-form-label">Name</label>
 									<input type="text" id="name" name="name" class="contact-form-field">
