finished skills page

--- a/contact.html
+++ b/contact.html
@@ -36,11 +36,11 @@
 							<form action="mailto:ethanjaldridge97@gmail.com?subject=Contact%20Form%20Submission" method="POST" enctype="multipart/form-data">
 								<div class="contact-form-item">
 									<label for="name" class="contact-form-label">Name</label>
-									<input type="text" id="name" name="name" class="contact-form-field">
+									<input type="text" id="name" name="name" class="contact-form-name-field">
 								</div>
 								<div class="contact-form-item">
 									<label for="message" class="contact-form-label">Message</label>
-									<textarea id="message" name="message" rows="9" class="contact-form-field"></textarea>
+									<textarea id="message" name="message" rows="9" class="contact-form-message-field"></textarea>
 								</div>
 								<div class="contact-form-item">
 									<button class="submit-button">Submit</button>
