--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
 				<div class="projects-content">
 					<div class="projects-text">
 						<h1 class="projects-h1">Projects</h1>
-						<p class="projects-p">&emsp;&emsp;d</p>
+						<p class="projects-p">d</p>
 					</div>
 				</div>
 			</div>
