--- a/skills.html
+++ b/skills.html
@@ -30,9 +30,84 @@
         <main>
 			<div class="skills-space">
 				<div class="skills-content">
-					<div class="skills-text">
-						<h1 class="skills-h1">Skills</h1>
-						<p class="skills-p">&emsp;&emsp;d</p>
+					<h1 class="skills-h1">Skills</h1>
+					<div class="skills-body">
+						<div class="html code-language-section">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="code-language-logo"/>
+							<div class="code-language-text">
+								<ul>
+									<li>Experienced in the use of HTML including webpage structure, media, tables, and forms.</li>
+								</ul>
+							</div>
+						</div>
+						<div class="css code-language-section">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="code-language-logo"/>
+							<div class="code-language-text">
+								<ul>
+									<li>Experienced in the use of CSS selectors, visual rules, the box model, display and positioning, color, typography, and links and buttons.</li>
+									<li>Proficient in the use of CSS flexbox, relative measurements, and media queries.</li>
+									<li>Acquainted with the use of CSS secondary navigation and grids and spacing.</li>
+								</ul>
+							</div>
+						</div>
+						<div class="js code-language-section">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="code-language-logo"/>
+							<div class="code-language-text">
+								<ul>
+									<li>Experienced in the use of scope.</li>
+									<li>Proficient in the use of functions, variables, objects, methods, conditionals, arrays, and loops.</li>
+									<li>Acquainted with the document object model (DOM) and debugging in JS.</li>
+								</ul>
+							</div>
+						</div>
+						<div class="nodejs code-language-section">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" class="code-language-logo"/>
+							<div class="code-language-text">
+								<ul>
+									<li>Acquainted with the use of nodejs.</li>
+								</ul>
+							</div>
+						</div>
+						<div class="git code-language-section">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="code-language-logo"/>
+							<div class="code-language-text">
+								<ul>
+									<li>Acquainted with the use of Git, mainly as it is used in VS Code.</li>
+								</ul>
+							</div>
+						</div>
+						<div class="git-hub code-language-section">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="code-language-logo"/>
+							<div class="code-language-text">
+								<ul>
+									<li>Acquainted with the use of GitHub.</li>
+								</ul>
+							</div>
+						</div>
+						<div class="markdown code-language-section">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/markdown/markdown-original.svg" class="code-language-logo" />
+							<div class="code-language-text">
+								<ul>
+									<li>Acquainted with the use of Markdown.</li>
+								</ul>
+							</div>
+						</div>
+						<div class="bash code-language-section">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-original.svg" class="code-language-logo"/>
+							<div class="code-language-text">
+								<ul>
+									<li>Acquainted with basic file navigation, manipulation, and redirection using Bash.</li>
+								</ul>
+							</div>
+						</div>
+						<div class="vscode code-language-section">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" class="code-language-logo"/>
+							<div class="code-language-text">
+								<ul>
+									<li>Proficient in the use of VS Code as it pertains to developing projects using the aforementioned languages, tracking them using Git, and sharing them to GitHub.</li>
+								</ul>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
